<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b8b8b8"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="150dp"
                android:background="@color/white"
                android:elevation="100dp"
                android:hint="@string/e_mail_adresa"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:stateListAnimator="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginStart="20dp"
                android:hint="@string/lozinka"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaboravljena_lozinka"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:backgroundTint="#ffd792"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/prijavi_se"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tekstRegistracija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nema_ra_un_registriraj_se"
            android:textColor="@color/black"
            android:layout_margin="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ili_se_prijavi_s"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            />


        <ImageView
            android:id="@+id/googleBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/google_login"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/facebookBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/facebook_prijava"
            android:src="@drawable/facebook" />

    </LinearLayout>

</ScrollView>

